--- a/index.html
+++ b/index.html
@@ -5,58 +5,44 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="profile-card">
         <div class="header">
             <img class="profileimg" src="assets/profile.jpg" alt="Timi">
-                <div class="snowflakes" aria-hidden="true">
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-    ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-  <div class="snowflake">
-    ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-  <div class="snowflake">
-    ❅
-  </div>
-  <div class="snowflake">
-    ❆
-  </div>
-</div>
-
-
+            <div class="snowflakes" aria-hidden="true">
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+                <div class="snowflake">❅</div>
+                <div class="snowflake">❆</div>
+            </div>
             <div class="info">
                 <h1>Dankó Tímea</h1>
-                <p>Hivatásos elf</p>
-                <p>Finnország, Lappföld</p>
+                <h4>Hivatásos elf</h4>
+                <h4><i class="fa fa-map-marker"></i> Finnország, Lappföld</h4>
             </div>
         </div>
         <div class="downer">
+            <div class="about">
+                <p>Hivatásos manóként szívemen viselem az ünnepek (főként a karácsony :D ) szentségét, melegét, harmóniáját és az eszmét, amit jelképez. Ezért is szeretem a munkámat és azt a bolondos hangulatot, ami körülveszi.</p>
+            </div>
+            <div class="links">
+            <ul><p>Ahová a hópihét fújhatod:</p>
+                <li><a href="https://www.facebook.com/timi.danko" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>  facebook</a></li>
+                <li><a href="https://accounts.google.com/signin/v2/identifier?hl=hu&continue=https%3A%2F%2Fmail.google.com%2Fmail&service=mail&flowName=GlifWebSignIn&flowEntry=AddSession" target="_blank"><i class="fa fa-envelope-open" aria-hidden="true"></i> elftundertimi@gmail.com</a></li>
+                <li><a href="https://www.posta.hu/kuldemeny_feladasa/level_kulfoldre/nemzetkozi_postakesz_boritek" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> Levelezés cím: Joulupukki Residance, Lappföld (Északi-sark)(Jelige: DTimi)</a></li>
+                </ul>
+            </div>
+            <img class="elf">
         </div>
     </div>
 
